# Phyloformer2

./: .gitattributes  .gitignore  README.md  infer.py  pyproject.toml  requirements.train.txt  requirements.txt  train.py
BayesNJ/: __init__.py  core.py  evopf.py  memory.py  treefuncs.py
BayesNJ/pf_sdk/pf/: data.py  modules.py  training.py  utils.py
pretrained/: pf2.tch  pf2_base.tch  pf2_cherry.tch  pf2_pastek.tch  pf2_potts.tch  pf2_revbayes.tch
scripts/: SimulateAlterRescale.py  Snakefile  alisim.py  compute_likelihoods.py  find_unduplicated.py  run_fastme.sh  train_data.yml
