[project]
name = "phyloformer-2"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "dendropy>=5.0.8",
    "ete3>=3.1.3",
    "legacy-cgi>=2.6.4",
    "lightning>=2.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.2.0",
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
